--- a/Samples/WinFormsNet8/WinFormsNet8.csproj
+++ b/Samples/WinFormsNet8/WinFormsNet8.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\WinFormsXML\WinFormsXML.csproj" />
+    <ProjectReference Include="..\WinFormsControlLibrary1\WinFormsControlLibrary1.csproj" />
   </ItemGroup>
 
 </Project>
